--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,13 +4,11 @@ body {
 }
 
 header {
-  height: 48px;
-  margin-bottom: 5px;
+  position: relative;
+  z-index: 100000;
   .headerMenu {
     box-shadow: 0px 1px 5px #666;
-    position: fixed;
     width: 100%;
-    z-index: 100000;
   }
 }
 
@@ -20,4 +18,14 @@ header {
   min-width: 48px;
   line-height: 46px;
   text-align: center;
+  a {
+    display: block;
+    height: 100%;
+    color: black;
+    icon {
+      margin-right: 0;
+      font-size: 24px;
+      vertical-align: middle;
+    } 
+  }
 }
