replace scss -> less

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -30,3 +30,14 @@ header {
     } 
   }
 }
+
+.cardset {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  &.cardset-default {
+    div {
+      width: 200px;
+    }
+  }
+}
