--- a/src/page/azurlane/games/pixeldrawer.less
+++ b/src/page/azurlane/games/pixeldrawer.less
@@ -1,5 +1,5 @@
-.pixel-drawer{
-  border: #DDDDDD solid;
+.pixel-drawer {
+  border: #80707070 solid;
   border-width: 1px 0 0 1px;
   line-height: 0;
   div {
@@ -8,8 +8,21 @@
       width: 16px;
       height: 16px;
       background-color: rgba(233, 233, 233, 0);
-      border: #DDDDDD solid;
+      border: #80707070 solid;
       border-width: 0 1px 1px 0;
     }
+  }
+}
+
+input.input-color-eraser {
+  &::-webkit-color-swatch { display: none; }
+  &::after {
+    content: '⌧';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-top: 4px;
+    text-align: center;
   }
 }
